objects/Case.object
<CustomObject>
    <fields>
        <fullName>Facets_Category__c</fullName>
        <label>Facets Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Facets_Subject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACYB - CYBERATTACK</fullName>
                </value>
                <value>
                    <fullName>BF01 - BlueFund set up issues</fullName>
                </value>
                <value>
                    <fullName>BF03 - BF link missing on My Account</fullName>
                </value>
                <value>
                    <fullName>BF05 - Blue Rewards Inquiries</fullName>
                </value>
                <value>
                    <fullName>BF07 - Complaint about the vendor</fullName>
                </value>
                <value>
                    <fullName>BF09 - Unable to loc grp/vendor systm</fullName>
                </value>
                <value>
                    <fullName>BF11 - Unable to loc mbr/vendor systm</fullName>
                </value>
                <value>
                    <fullName>BF13 - Welcome Kit Inquiry/HSA only</fullName>
                </value>
                <value>
                    <fullName>BP01 - Communities</fullName>
                </value>
                <value>
                    <fullName>BP02 - Gen Broker Portal Inquiry</fullName>
                </value>
                <value>
                    <fullName>BP03 - Gen Employee Portal Inquiry</fullName>
                </value>
                <value>
                    <fullName>BP04 - Gen Hub Inquiry</fullName>
                </value>
                <value>
                    <fullName>BP05 - Group Set-Up</fullName>
                </value>
                <value>
                    <fullName>BP06 - Provisioning</fullName>
                </value>
                <value>
                    <fullName>BP07 - Quoting</fullName>
                </value>
                <value>
                    <fullName>BSA1 - Prospect Inquiry</fullName>
                </value>
                <value>
                    <fullName>BSA2 - File Update Inquiry</fullName>
                </value>
                <value>
                    <fullName>BSA3 - BOR Inquiry</fullName>
                </value>
                <value>
                    <fullName>BSA4 - Transferred to Sales Rep</fullName>
                </value>
                <value>
                    <fullName>BSA5 - Transferred to another dept</fullName>
                </value>
                <value>
                    <fullName>BSQ1 - Quote-Off Cycle Request</fullName>
                </value>
                <value>
                    <fullName>BSQ2 - Quote-Renewal Request</fullName>
                </value>
                <value>
                    <fullName>BSQ3 - Quote-New Business Request</fullName>
                </value>
                <value>
                    <fullName>BSQ4 - Quote-Late Exception Request</fullName>
                </value>
                <value>
                    <fullName>BSQ5 - Quote-Alternative</fullName>
                </value>
                <value>
                    <fullName>BSQ6 - Quote-On Exchange</fullName>
                </value>
                <value>
                    <fullName>BSQ7 - Transferred to another dept</fullName>
                </value>
                <value>
                    <fullName>DC01 - Processed Correctly</fullName>
                </value>
                <value>
                    <fullName>DC02 - Processed Incorrectly</fullName>
                </value>
                <value>
                    <fullName>DC03 - Pended Claim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facets_Satisfaction_Level__c</fullName>
        <description>This field translates the SLA Category on a case to a Facets Satisfaction Level Code that is included when creating a Facets case from the Salesforce to Facets integration component. ( Request: CSSC.satifactionLevel.  Corresponds to Facets.MCTR_SATS table)</description>
        <formula>IF(   ISPICKVAL(SLA_Category__c,'Non-Platinum'), 'BR60', 
   IF(ISPICKVAL(SLA_Category__c,'Broker Escalation'), 'BR61', 
   IF(ISPICKVAL(SLA_Category__c,'Broker Compliance'), 'BR6C', 
   IF(ISPICKVAL(SLA_Category__c,'Platinum'), 'BR6P',
   IF(ISPICKVAL(SLA_Category__c,'Elite'), 'BR6E',
   IF(ISPICKVAL(SLA_Category__c,'Premier'), 'BRP1',
   IF(ISPICKVAL(SLA_Category__c,'Preferred'), 'BRP2', 
   IF(ISPICKVAL(SLA_Category__c,'Select'), 'BR60', 
   IF(ISPICKVAL(SLA_Category__c,'Broker Sales Support'), 'BR6S', 'Unrecognized SLA Category!')
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field translates the SLA Category on a case to a Facets Satisfaction Level Code that is included when creating a Facets case from the Salesforce to Facets integration component. ( Request: CSSC.satifactionLevel.  Corresponds to Facets.MCTR_SATS table</inlineHelpText>
        <label>Facets Satisfaction Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facets_Status__c</fullName>
        <description>Enter Facets case Status</description>
        <inlineHelpText>The Status of case in facets</inlineHelpText>
        <label>Facets Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facets_Subject__c</fullName>
        <label>Facets Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACYB - CYBERATTACK</fullName>
                </value>
                <value>
                    <fullName>BRCP - CareFirst Portals</fullName>
                </value>
                <value>
                    <fullName>BRSA - Sales Assistance</fullName>
                </value>
                <value>
                    <fullName>BRSQ - Sales Quote</fullName>
                </value>
                <value>
                    <fullName>DCLM - Dental Claims</fullName>
                </value>
                <value>
                    <fullName>MAPP-M Appeal</fullName>
                </value>
                <value>
                    <fullName>MAUT-M Auth/Referral Inquiry</fullName>
                </value>
                <value>
                    <fullName>MBCC - Credit Card Inquiry</fullName>
                </value>
                <value>
                    <fullName>MBEI - EBill Inquiry</fullName>
                </value>
                <value>
                    <fullName>MBEN-M Benefits</fullName>
                </value>
                <value>
                    <fullName>MBFA - M BlueFund Administration</fullName>
                </value>
                <value>
                    <fullName>MBII - Invoice Inquiry</fullName>
                </value>
                <value>
                    <fullName>MBIL-M Billing</fullName>
                </value>
                <value>
                    <fullName>MBMP - Missing Payment</fullName>
                </value>
                <value>
                    <fullName>MBPA - Payment Arrangement</fullName>
                </value>
                <value>
                    <fullName>MBRR - Request to Reinstate</fullName>
                </value>
                <value>
                    <fullName>MBTI - Termination Inquiry</fullName>
                </value>
                <value>
                    <fullName>MCAC-M Credit &amp; Collection</fullName>
                </value>
                <value>
                    <fullName>MCDH-M CDH</fullName>
                </value>
                <value>
                    <fullName>MCHK-M Check Inquiry</fullName>
                </value>
                <value>
                    <fullName>MCLM-M Claim Status</fullName>
                </value>
                <value>
                    <fullName>MCMP-M Complaint Plan/Service</fullName>
                </value>
                <value>
                    <fullName>MCOB-M COB</fullName>
                </value>
                <value>
                    <fullName>MCOR - M Correspondence</fullName>
                </value>
                <value>
                    <fullName>MDED-M Deductible</fullName>
                </value>
                <value>
                    <fullName>MDEM-M Demographics</fullName>
                </value>
                <value>
                    <fullName>MDIQ-M Duplicate Inquiry</fullName>
                </value>
                <value>
                    <fullName>MDOC-M Document Request</fullName>
                </value>
                <value>
                    <fullName>MELG-M Eligibility</fullName>
                </value>
                <value>
                    <fullName>MENR - Enrollment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facets_case_ID__c</fullName>
        <description>Enter Facets Case ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Facets Case ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GroupContrivedKey__c</fullName>
        <description>This field holds the Group contrive Key that we get back from Facets when creating Member Case. This field will be used for integrating member case to facets. This field will not be made visible in the UI for any Salesforce users</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GroupContrivedKey</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a case to a 2-50 Group Account based on Facets Account Number. this is used in the back end for 360 degree view of case</description>
        <label>2-50 Group Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <infoMessage>Please enter name or Group Id and Check "All fields" to find the Group you are looking for</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Cases(2-50)</relationshipLabel>
        <relationshipName>Group_Cases_2_50</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will look up to Group Table to extract Group Info</description>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Past__c</fullName>
        <description>Calculates the Received case hours from now.</description>
        <formula>(NOW() - Received_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Past</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_Fix__c</fullName>
        <label>Hours to Fix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Group Structure &amp; Admin Setup</fullName>
                </value>
                <value>
                    <fullName>Benefit Design &amp; Creation of NAEGS</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment, Materials &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Benefit Coding, Loading and Testing</fullName>
                </value>
                <value>
                    <fullName>Enrollment &amp; ID Card Generation</fullName>
                </value>
                <value>
                    <fullName>Post Sales Document Generation</fullName>
                </value>
                <value>
                    <fullName>Billing (Monthly) Invoices</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Member Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Frequency__c</fullName>
        <label>Issue Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Specific</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Multiple Accounts</fullName>
                </value>
                <value>
                    <fullName>Account level</fullName>
                </value>
                <value>
                    <fullName>Jan-Benefits</fullName>
                </value>
                <value>
                    <fullName>Jan-CVS</fullName>
                </value>
                <value>
                    <fullName>Jan-Enrollment</fullName>
                </value>
                <value>
                    <fullName>Jan-ID’s</fullName>
                </value>
                <value>
                    <fullName>Magellan</fullName>
                </value>
                <value>
                    <fullName>Red Flag</fullName>
                </value>
                <value>
                    <fullName>Red Flag-Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Sub_Category__c</fullName>
        <inlineHelpText>This field is dependent on Issue Category</inlineHelpText>
        <label>Issue Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Benefit Request</fullName>
                </value>
                <value>
                    <fullName>Mental Health Parity</fullName>
                </value>
                <value>
                    <fullName>ARC Approval</fullName>
                </value>
                <value>
                    <fullName>Request for Quote</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Confirmation of Sales/Group Paperwork</fullName>
                </value>
                <value>
                    <fullName>Account Kick-off Meeting</fullName>
                </value>
                <value>
                    <fullName>Group Structure</fullName>
                </value>
                <value>
                    <fullName>Implementation Plan</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Doc</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>Create MM</fullName>
                </value>
                <value>
                    <fullName>Benefit Setup</fullName>
                </value>
                <value>
                    <fullName>CYC</fullName>
                </value>
                <value>
                    <fullName>CYC BF App</fullName>
                </value>
                <value>
                    <fullName>Process Enrollment</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>BR Wellness</fullName>
                </value>
                <value>
                    <fullName>Setup CVS</fullName>
                </value>
                <value>
                    <fullName>Setup Davis</fullName>
                </value>
                <value>
                    <fullName>Setup Magellan</fullName>
                </value>
                <value>
                    <fullName>Setup Facets Dental</fullName>
                </value>
                <value>
                    <fullName>Carve-out RX</fullName>
                </value>
                <value>
                    <fullName>Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Perf Guarantee</fullName>
                </value>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>FP CFL</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
                <value>
                    <fullName>Accm Cnt Svcs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_Age__c</fullName>
        <description>This field will hold Member's Age</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_City__c</fullName>
        <description>This field will hold Member City</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Country__c</fullName>
        <defaultValue>"USA"</defaultValue>
        <description>this field will hold Member's Country</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Date_of_Birth__c</fullName>
        <description>This field will hold Member's Date of Birth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_First_Name__c</fullName>
        <description>This field will hold the Member First Name Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_ID__c</fullName>
        <description>This field will hold Memebr ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Last_Name__c</fullName>
        <description>This field will hold the Member's last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Phone__c</fullName>
        <description>This field will hold the Member's Phone Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>M_Relationship__c</fullName>
        <description>This Field identifies the relationship between the member and the subscriber.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_State__c</fullName>
        <description>This is field will hold Member's State</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Street__c</fullName>
        <description>This field will hold Member Street address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Zip_Code__c</fullName>
        <description>This field will hold Member's Zip Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>This formula will show the market segmetn as 2-50 or 51-199 based on the Group Names record type</description>
        <formula>IF( ISBLANK( Group__c ) , NULL, TEXT(Group__r.Market_Segment__c))</formula>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberContrivedKey__c</fullName>
        <description>This field holds the Member contrive Key that we get back from Facets when creating Member Case. This field will be used for integrating member case to facets. This field will not be made visible in the UI for any Salesforce users</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MemberContrivedKey</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members_Impacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Members Impacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modified_By_NAEGS_Track_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modified By NAEGS Track ID Number</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAEGS_Change_Request_Workflow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAEGS Change Request Workflow</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_NAEG_Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of NAEGS Template</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Email__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Email</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To be used when Group not found in Group Name lookup</inlineHelpText>
        <label>New Group ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Emails_Received__c</fullName>
        <description>This field is for back-end count of emails received via email-to-case. It will be updated by workflow rule on Email Message object</description>
        <label>Number of Emails Received</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operational Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Associated_Hours__c</fullName>
        <label>Other Associated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Path</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Guarantee Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Item__c</fullName>
        <label>Privacy Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Case_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Case Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Internal Reason Code</description>
        <label>Internal Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C001-Closed First Contact</fullName>
                </value>
                <value>
                    <fullName>C002-Questions(s) Answered</fullName>
                </value>
                <value>
                    <fullName>C003-Adjustment Completed</fullName>
                </value>
                <value>
                    <fullName>C004-Materials/Documents Sent</fullName>
                </value>
                <value>
                    <fullName>C005-Information Received</fullName>
                </value>
                <value>
                    <fullName>C006-Information Not Received</fullName>
                </value>
                <value>
                    <fullName>C007-Letter Sent</fullName>
                </value>
                <value>
                    <fullName>C008-E-mail Response</fullName>
                </value>
                <value>
                    <fullName>C009-Executive Level Response</fullName>
                </value>
                <value>
                    <fullName>C010-No Response Necessary</fullName>
                </value>
                <value>
                    <fullName>C011-Returned Call</fullName>
                </value>
                <value>
                    <fullName>C012-No Record of Inquiry</fullName>
                </value>
                <value>
                    <fullName>C013-Received in Central Appeals</fullName>
                </value>
                <value>
                    <fullName>C014-Referred to Carefirst.com</fullName>
                </value>
                <value>
                    <fullName>C100-Other</fullName>
                </value>
                <value>
                    <fullName>CO01-Approved Exception</fullName>
                </value>
                <value>
                    <fullName>CO03-Billing discrepancies</fullName>
                </value>
                <value>
                    <fullName>CO06-Claim rejected in error</fullName>
                </value>
                <value>
                    <fullName>CO09-Corrected claim received</fullName>
                </value>
                <value>
                    <fullName>CO12-Enrollment discrepancies</fullName>
                </value>
                <value>
                    <fullName>CO15-EOB received</fullName>
                </value>
                <value>
                    <fullName>CO18-No Authorization of file</fullName>
                </value>
                <value>
                    <fullName>CO21-PAR Medical Rev-pay rej lines</fullName>
                </value>
                <value>
                    <fullName>CO24-Waiting period removed</fullName>
                </value>
                <value>
                    <fullName>CO25-CF Primary/newly identified</fullName>
                </value>
                <value>
                    <fullName>CO26-CF Secondary/newly identified</fullName>
                </value>
                <value>
                    <fullName>CO27-CF Primary/Prev identified</fullName>
                </value>
                <value>
                    <fullName>CO28-CF Secondary/Prev identified</fullName>
                </value>
                <value>
                    <fullName>CO29-Other, See Task Notes</fullName>
                </value>
                <value>
                    <fullName>CU01-Claim paid correctly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_NAEGS_Change_Request__c</fullName>
        <label>Reason for NAEGS Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OBN/Bx Audit</fullName>
                </value>
                <value>
                    <fullName>Benefit Testing Problem</fullName>
                </value>
                <value>
                    <fullName>iLog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>This will store the time the first time a case gets assigned to a user either from the queue or if the case is created by himself</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_Day__c</fullName>
        <description>This field will only be used to populate today() and will only be used for SLA workflow purpose</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Relationships__c</fullName>
        <description>This multi select picklist will be used to indicate additional relationship the case is to be created for when crating member case.</description>
        <label>Related Relationships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>